grammar.js
    source_file: $ => repeat(choice(
      $.property_statement,
      $.handler_definition,
      $._statement,
    )),

    _statement: $ => choice(
      $.tell_statement,
      $.if_statement,
      $.repeat_statement,
      $.try_statement,
      $.set_statement,
      $.return_statement,
      $.exit_statement,
      $.error_statement,
      $.considering_statement,
      $.ignoring_statement,
      $.timeout_statement,
      $.transaction_statement,
      $.use_statement,
      $.script_statement,
      $.application_command,
      $.expression_statement,
    ),

    // Comments
    comment: $ => choice(
      seq('--', /.*/),
      seq('#', /.*/),
      seq('(*', repeat(choice(/[^*]/, /\*[^)]/)), '*)'),
    ),

    // Tell Statement
    tell_statement: $ => prec.right(choice(
      seq(
        'tell',
        field('target', $.expression),
        'to',
        field('statement', $._statement),
      ),
      seq(
        'tell',
        field('target', $.expression),
        repeat1($._statement),
        'end',
        optional('tell'),
      ),
      seq(
        'tell',
        field('target', $.expression),
      ),
    )),

    // If Statement
    if_statement: $ => seq(
      'if',
      field('condition', $.expression),
      'then',
      choice(
        $._statement,
        seq(
          repeat1($._statement),
          repeat($.else_if_clause),
          optional($.else_clause),
          'end',
          optional('if'),
        ),
      ),
    ),

    repeat_statement: $ => choice(
      $.repeat_forever,
      $.repeat_times,
      $.repeat_until,
      $.repeat_while,
      $.repeat_with,
      $.repeat_with_in,
    ),

    repeat_times: $ => prec.right(seq(
      'repeat',
      field('count', $.expression),
      optional('times'),
      repeat1($._statement),
      'end',
      optional('repeat'),
    )),

    set_statement: $ => seq(
      choice('set', 'copy'),
      field('target', $.expression),
      'to',
      field('value', $.expression),
    ),

    // Return Statement
    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $.expression)),
    )),

    // Exit Statement
    use_statement: $ => seq(
      'use',
      choice(
        seq('scripting', 'additions'),
        seq('AppleScript', 'version', $.string),
        seq('framework', $.string),
        seq(
          optional(seq(field('alias', $.identifier), ':')),
          'script',
          $.string,
        ),
        seq(
          optional('application'),
          field('name', $.string),
          optional(seq('version', field('version', $.string))),
        ),
      ),
    ),

    // Script Statement
    handler_definition: $ => choice(
      $.simple_handler,
      $.positional_handler,
      $.labeled_handler,
    ),

    simple_handler: $ => prec.right(10, seq(
      'on',
      field('name', $.identifier),
      '(',
      optional($.parameter_list),
      ')',
      repeat1($._statement),
      'end',
      optional(field('end_name', $.identifier)),
    )),

    parameter_list: $ => seq(
      $.identifier,
      repeat(seq(',', $.identifier)),
    ),

    // Known multi-word commands (tokens for commands without keywords, sequences for those with keywords)
    expression_statement: $ => $.expression,

    // Objective-C Method Call (AppleScriptObjC)
    expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.type_cast,  // Type cast with 'as' keyword
      $.parenthesized_expression,
      $.application_expression,
      $.path_to_expression,  // "path to" command in expression context
      $.method_call,  // Must be before property_access (higher precedence)
      $.property_access,
      $.element_access,
      $.list,
      $.record,
      $.identifier,
      prec.dynamic(-1, $.property_name),  // Lower dynamic precedence so identifier is preferred
      $.string,
      $.number,
      $.boolean,
      $.missing_value,
      $.current_application,
      $.script_reference,
      $.reference_expression,
    ),

    binary_expression: $ => {
      const table = [
        [prec.left, 12, '^'],
        [prec.left, 11, choice('*', '/', 'div', 'mod', '÷')],
        [prec.left, 10, choice('+', '-', '&')],
        [prec.left, 7, choice('and', 'or')],
        [prec.left, 6, choice(
          '=', '≠', '>', '<', '≥', '≤', '>=', '<=',
          'equals', 'is equal to', 'is equal', 'equal to',
          'is not', 'is not equal to', 'is not equal', 'isn\'t', 'isn\'t equal to',
          'is greater than', 'greater than', 'comes after',
          'is less than', 'less than', 'comes before',
          'is greater than or equal to', 'is greater than or equal',
          'is less than or equal to', 'is less than or equal',
          'is',
        )],
        [prec.left, 5, choice(
          'contains', 'contain', 'does not contain', 'doesn\'t contain',
          'is in', 'is contained by',
          'is not in', 'is not contained by',
          'starts with', 'start with', 'begins with', 'begin with',
          'ends with', 'end with',
        )],
      ];

      return choice(...table.map(([fn, precedence, operator]) =>
        fn(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        ))
      ));
    },

    // Type cast expression (e.g., "x as text", "(path to home) as alias")
    application_expression: $ => prec(14, seq(
      'application',
      field('name', $.string),
    )),

    identifier: $ => choice(
      /[A-Za-z_][A-Za-z0-9_]*/,
      seq('|', /[^|]+/, '|'),
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        /\\./,
      )),
      '"',
    ),

    number: $ => choice(
      $.integer,
      $.real,
    ),

    integer: $ => /[0-9]+/,

    boolean: $ => choice('true', 'false', 'yes', 'no'),

    list: $ => seq(
      '{',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(','),
      )),
      '}',
    ),

    record: $ => seq(
      '{',
      optional(seq(
        $.record_entry,
        repeat(seq(',', $.record_entry)),
        optional(','),
      )),
      '}',
    ),

    record_entry: $ => seq(
      field('key', choice($.identifier, $.string)),
      ':',
      field('value', $.expression),
    ),
  },
});
